@@ -113,6 +113,7 @@ if (( $# > 1 )); then
 fi
 
 # There is only one package to install.  Do so in this instance.
+profiles_cwd=yes
 open_package "$1"
 
 log_echo
