@@ -84,6 +84,7 @@ if (( $# > 1 )); then
 fi
 
 # There is only one package to build.  Do so in this instance.
+profiles_cwd=yes
 open_package "$1"
 
 # If we have build commands, run them in the package's source directory.
