@@ -84,6 +84,7 @@ if (( $# > 1 )); then
 fi
 
 # There is only one package to check.  Do so in this instance.
+profiles_cwd=yes
 open_package "$1"
 
 # Only run check if told to.
