@@ -76,6 +76,7 @@ function list_missing {
 
 	# Run in a subshell to avoid contamination between packages.
 	(
+		profiles_cwd=yes
 		source_profile "$1"
 		list_files | remove_found
 	)
