@@ -136,6 +136,7 @@ if (( $# > 1 )); then
 fi
 
 # There is only one package to unpack.  Do so in this instance.
+profiles_cwd=yes
 open_package "$1"
 
 unpack_archives &&
