@@ -22,6 +22,15 @@
 	* src/libprometheus.bash.in (location_of): Only search $srcdir, not
 	  $builddir.
 
+	* src/libprometheus.bash.in (source_profile): Only search current
+	  working directory if $profiles_cwd is `yes'.
+	* src/pkgget.in: Updated profile handling.
+	* src/pkgunpack.in: Updated profile handling.
+	* src/pkgbuild.in: Updated profile handling.
+	* src/pkgcheck.in: Updated profile handling.
+	* src/pkginstall.in: Updated profile handling.
+	* src/pkgadd.in: Updated profile handling.
+
 2004-08-02 Gareth Jones <gareth_jones@users.berlios.de>
 
 	* src/libprometheus.bash.in (add_profile): Fixed bug & added
